# jornada_dbt

./: README.md  pyproject.toml
Adventure/: dbt_project.yml
Adventure/models/marts/: scenario.sql  vendas.sql
Adventure/models/raw/adventure_db/: raw_adventure_dimdate.sql  raw_adventure_vendas_net.sql
Adventure/models/staging/: stg_adventure_dim_scenario.sql  stg_adventure_dimdate.sql  stg_adventure_vendas_net.sql  stg_models.yml  stg_sources.yml
Adventure/seeds/: DimScenarioTHR.csv  DimScenarioTHR2.csv  vendas_net.csv
